--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "deploy": "cdk deploy",
     "diff": "cdk diff",
     "synth": "cdk synth",
-    "lint": "eslint src",
+    "lint": "eslint src/**.ts",
     "lint:fix": "eslint --fix src",
     "prettier": "prettier --check src/",
     "prettier:fix": "prettier --write src/*",
