--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "deploy": "cdk deploy",
     "diff": "cdk diff",
     "synth": "cdk synth",
-    "lint": "eslint src/**.ts",
+    "lint": "eslint src/*.ts & eslint src/**/*.ts",
     "lint:fix": "eslint --fix src",
     "prettier": "prettier --check src/",
-    "prettier:fix": "prettier --write src/*",
+    "prettier:fix": "prettier --write src/*.ts & prettier --write src/**/*.ts",
     "test": "jest",
     "test:fix": "jest --updateSnapshot"
   },
