--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test:fix": "jest --updateSnapshot"
   },
   "dependencies": {
+    "@aws-cdk/aws-lambda-go-alpha": "^2.110.0-alpha.0",
     "aws-cdk-lib": "^2.108.1",
     "constructs": "^10.3.0",
     "source-map-support": "^0.5.21"
