--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "test:fix": "jest --updateSnapshot"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigatewayv2-alpha": "^2.110.1-alpha.0",
+    "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.110.1-alpha.0",
     "@aws-cdk/aws-lambda-go-alpha": "^2.110.0-alpha.0",
-    "aws-cdk-lib": "^2.108.1",
+    "aws-cdk-lib": "^2.110.1",
     "constructs": "^10.3.0",
     "source-map-support": "^0.5.21"
   },
