--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,4 +19,4 @@ jobs:
       - run: yarn compile
       - run: yarn synth
         if: github.repository != 'AleCo3lho/aws-cdk-template'
-      # - run: yarn test
+      - run: yarn test
