--- a/package.json
+++ b/package.json
@@ -17,23 +17,24 @@
     "test:fix": "jest --updateSnapshot"
   },
   "dependencies": {
-    "@aws-cdk/aws-lambda-go-alpha": "^2.134.0-alpha.0",
-    "aws-cdk-lib": "^2.134.0",
+    "@aws-cdk/aws-lambda-go-alpha": "^2.143.0-alpha.0",
+    "aws-cdk-lib": "^2.143.0",
     "constructs": "^10.3.0",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "typescript-eslint": "^7.10.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.30",
-    "@typescript-eslint/eslint-plugin": "^7.4.0",
-    "@typescript-eslint/parser": "^7.4.0",
-    "aws-cdk": "^2.134.0",
-    "eslint": "^8.57.0",
+    "@types/node": "^20.12.12",
+    "@typescript-eslint/eslint-plugin": "^7.10.0",
+    "@typescript-eslint/parser": "^7.10.0",
+    "aws-cdk": "^2.143.0",
+    "eslint": "^9.3.0",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
-    "ts-jest": "^29.1.2",
+    "ts-jest": "^29.1.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.5"
   },
   "prettier": {
     "printWidth": 120
